--- a/src/assets/localization/ru.json
+++ b/src/assets/localization/ru.json
@@ -1,3 +1,14 @@
 {
-    "dataLoadingError": "Произошла ошибка при загрузке данных"
+    "errors" : {
+        "dataLoadingError": "Произошла ошибка при загрузке данных"
+    },
+    "dayNames": [
+        "Воскресенье",
+        "Понедельник",
+        "Вторник",
+        "Среда",
+        "Четверг",
+        "Пятница",
+        "Суббота"
+    ]
 }
