--- a/src/assets/localization/ru.json
+++ b/src/assets/localization/ru.json
@@ -24,5 +24,12 @@
         "mm": "мм",
         "kmh": "км/ч",
         "km": "км"
+    },
+    "qualityStats": {
+        "airQualityTooltip": "Информация о качестве воздуха предоставляется только для 3-х дневного периода времени"
+    },
+    "astro" : {
+        "sunrise": "Рассвет",
+        "sunset": "Закат"
     }
 }
