#21755118 add language switcher

--- a/src/assets/localization/en.json
+++ b/src/assets/localization/en.json
@@ -31,5 +31,9 @@
     "astro" : {
         "sunrise": "Sunrise",
         "sunset": "Sunset"
+    },
+    "language" : {
+        "caption": "Lang",
+        "tooltip": "Click to change the language"
     }
 }
