--- a/src/assets/localization/ru.json
+++ b/src/assets/localization/ru.json
@@ -31,5 +31,9 @@
     "astro" : {
         "sunrise": "Рассвет",
         "sunset": "Закат"
+    },
+    "language" : {
+        "caption": "Язык",
+        "tooltip": "Нажимите, чтобы изменить язык"
     }
 }
