--- a/src/assets/localization/ru.json
+++ b/src/assets/localization/ru.json
@@ -17,6 +17,9 @@
         "wind": "Ветер",
         "humidity": "Влажность",
         "visibility": "Видимость",
+        "feelsLike": "Ощущается",
+        "pressure": "Давление",
+        "cloudCoverage": "Облачность",
         "rain-chance": "Вероятность дождя",
         "snow-chance": "Верояность снега"
     },
@@ -26,7 +29,9 @@
         "km": "км"
     },
     "qualityStats": {
-        "airQualityTooltip": "Информация о качестве воздуха предоставляется только для 3-х дневного периода времени"
+        "airQualityTooltip": "Информация о качестве воздуха предоставляется только для 3-х дневного периода времени",
+        "uvIndex": "UV Индекс",
+        "airQuality": "Качество воздуха"
     },
     "astro" : {
         "sunrise": "Рассвет",
