style chart, add hourly condition icons ##22032180

--- a/src/assets/localization/en.json
+++ b/src/assets/localization/en.json
@@ -43,5 +43,9 @@
     },
     "search" : {
         "placeholder": "Search"
+    },
+    "chart": {
+        "hourly": "Hourly",
+        "details": "details..."
     }
 }
