--- a/src/assets/localization/ru.json
+++ b/src/assets/localization/ru.json
@@ -43,5 +43,9 @@
     },
     "search" : {
         "placeholder": "Поиск"
+    },
+    "chart": {
+        "hourly": "По часам",
+        "details": "подробнее..."
     }
 }
