--- a/src/assets/localization/ru.json
+++ b/src/assets/localization/ru.json
@@ -1,6 +1,7 @@
 {
     "errors" : {
-        "dataLoadingError": "Произошла ошибка при загрузке данных"
+        "dataLoadingError": "Произошла ошибка при загрузке данных",
+        "searchError": "Произошла ошибка во время поиска"
     },
     "dayNames": [
         "Воскресенье",
@@ -42,7 +43,8 @@
         "tooltip": "Нажимите, чтобы изменить язык"
     },
     "search" : {
-        "placeholder": "Поиск"
+        "placeholder": "Поиск",
+        "notFound": "Ничего не найдено"
     },
     "chart": {
         "hourly": "По часам",
