#22499255 add no-data components to replace lost data

--- a/src/assets/localization/en.json
+++ b/src/assets/localization/en.json
@@ -1,7 +1,9 @@
 {
     "errors" : {
         "dataLoadingError": "An error occured during data loading",
-        "searchError": "An error occured during search"
+        "searchError": "An error occured during search",
+        "noData": "No data",
+        "noDataTooltip": "Some information was lost during data fetching"
     },
     "dayNames": [
         "Sunday",
