--- a/src/assets/localization/ru.json
+++ b/src/assets/localization/ru.json
@@ -1,7 +1,9 @@
 {
     "errors" : {
         "dataLoadingError": "Произошла ошибка при загрузке данных",
-        "searchError": "Произошла ошибка во время поиска"
+        "searchError": "Произошла ошибка во время поиска",
+        "noData": "Нет данных",
+        "noDataTooltip": "Некоторая часть информации была утеряна при получении данных"
     },
     "dayNames": [
         "Воскресенье",
