#22632872 add loading and missing state to components

--- a/src/assets/localization/ru.json
+++ b/src/assets/localization/ru.json
@@ -3,7 +3,7 @@
         "dataLoadingError": "Произошла ошибка при загрузке данных",
         "searchError": "Произошла ошибка во время поиска",
         "noData": "Нет данных",
-        "noDataTooltip": "Некоторая часть информации была утеряна при получении данных"
+        "noDataTooltip": "Эта информация недоступна по причине использования автором приложения менее расширенной версии api, или данные были утеряны при попытке их получения."
     },
     "dayNames": [
         "Воскресенье",
