--- a/src/assets/localization/en.json
+++ b/src/assets/localization/en.json
@@ -3,7 +3,7 @@
         "dataLoadingError": "An error occured during data loading",
         "searchError": "An error occured during search",
         "noData": "No data",
-        "noDataTooltip": "Some information was lost during data fetching"
+        "noDataTooltip": "This information is not available due to the api plan the app's author is utilizing, or was lost during data fetching"
     },
     "dayNames": [
         "Sunday",
