refactor some components #23491253

--- a/src/assets/localization/ru.json
+++ b/src/assets/localization/ru.json
@@ -77,5 +77,11 @@
         "dewPoint": "Порог конденсации",
         "uv": "UV Индекс",
         "visibility": "Видимость"
+    },
+    "smallChartOptions": {
+        "temp": "температура",
+        "precip": "осадки",
+        "wind": "ветер",
+        "pressure": "давление"
     }
 }
