write more tests #23807043

--- a/src/assets/localization/en.json
+++ b/src/assets/localization/en.json
@@ -83,5 +83,6 @@
         "precip": "precip.",
         "wind": "wind",
         "pressure": "pressure"
-    }
+    },
+    "creditLinkText": "Built with"
 }
