--- a/src/assets/localization/ru.json
+++ b/src/assets/localization/ru.json
@@ -83,5 +83,7 @@
         "precip": "осадки",
         "wind": "ветер",
         "pressure": "давление"
-    }
+    },
+
+    "creditLinkText": "Сделано при помощи"
 }
