--- a/src/assets/localization/ru.json
+++ b/src/assets/localization/ru.json
@@ -44,6 +44,10 @@
         "caption": "Язык",
         "tooltip": "Нажимите, чтобы изменить язык"
     },
+    "theme": {
+        "caption": "Тема",
+        "tooltip": "Изменить тему приложения"
+    },
     "search" : {
         "placeholder": "Поиск",
         "notFound": "Ничего не найдено"
